--- a/.travis.yml
+++ b/.travis.yml
@@ -1,58 +1,29 @@
-#This configuration was found on ankidroid and changed a little.
+os: linux
 language: android
-
-jdk:
-  - oraclejdk11
-
-dist: trusty
-
-env:
-  global:
-    - ADB_INSTALL_TIMEOUT=8
-    - ABI=armeabi-v7a
-    - EMU_FLAVOR=default # use google_apis flavor if no default flavor emulator
-    # PATH order is incredibly important. e.g. the 'emulator' script exists in more than one place!
-    - ANDROID_HOME=/usr/local/android-sdk
-    - TOOLS=${ANDROID_HOME}/tools
-    - PATH=${ANDROID_HOME}:${ANDROID_HOME}/emulator:${TOOLS}:${TOOLS}/bin:${ANDROID_HOME}/platform-tools:${PATH}
-  matrix:
-    - API=27 ABI=x86_64
-    #- API=28 ABI=x86_64 # Slowness/timing issues / Fails with unresponsive adb command / so unrecognized API for adb
-    #- API=Q ABI=x86_64 # Fails I think because of perf + timeouts. 10 minute wait not enough, fixable
-
-# This block currently does not work, but it used to. API=28/Q are probably fixable
-# but we don't need allow_failures to be on in master to work through them
-#matrix:
-#  fast_finish: true # We can report success without waiting for these
-#  allow_failures:
-#     - API=28 ABI=x86_64
-#     #- env: API=28 ABI=x86_64 # allowing failure to see how it works flake-wise
+jdk: openjdk11
 
 android:
   components:
-    # installing tools to start, then use `sdkmanager` below to get the rest
     - tools
+    - platform-tools
+    - tools
+    - extra-android-m2repository
+env:
+  global:
+    - TARGET_VERSION=30
+    - ANDROID_BUILD_TOOLS_VERSION=30.0.2
+    - ANDROID_HOME=~/android-sdk
 
-  licenses:
-    - 'android-sdk-preview-license-.+'
-    - 'android-sdk-license-.+'
-    - 'google-gdk-license-.+'
+before_install:
+  - touch $HOME/.android/repositories.cfg
+  - wget "https://dl.google.com/android/repository/commandlinetools-linux-7302050_latest.zip" -O commandlinetools.zip
+  - unzip commandlinetools.zip -d $ANDROID_HOME/
+  - yes | $ANDROID_HOME/cmdline-tools/bin/sdkmanager "platforms;android-${TARGET_VERSION}" --sdk_root=$ANDROID_HOME
+  - yes | $ANDROID_HOME/cmdline-tools/bin/sdkmanager "build-tools;${ANDROID_BUILD_TOOLS_VERSION}" --sdk_root=$ANDROID_HOME
 
-## Emulator Management: Create, Start and Wait
-#install:
-#  - echo 'count=0' > /home/travis/.android/repositories.cfg # Avoid harmless sdkmanager warning
-#  - echo y | sdkmanager "platform-tools" >/dev/null
-#  - echo y | sdkmanager "tools" >/dev/null # A second time per Travis docs, gets latest versions
-#  - echo y | sdkmanager "build-tools;28.0.3" >/dev/null # Implicit gradle dependency - gradle drives changes
-#  - echo y | sdkmanager "platforms;android-$API" >/dev/null # We need the API of the emulator we will run
-#  - echo y | sdkmanager "platforms;android-28" >/dev/null # We need the API of the current compileSdkVersion from gradle.properties
-#  - echo y | sdkmanager --channel=4 "emulator" # Experiment with canary, specifying 28.0.3 (prior version) did not work
-#  - echo y | sdkmanager "extras;android;m2repository" >/dev/null
-#  - echo y | sdkmanager "system-images;android-$API;$EMU_FLAVOR;$ABI" #>/dev/null # install our emulator
-#  - echo no | avdmanager create avd --force -n test -k "system-images;android-$API;$EMU_FLAVOR;$ABI" -c 10M
-#  - emulator -verbose -avd test -no-accel -no-snapshot -no-window $AUDIO -camera-back none -camera-front none -selinux permissive -qemu -m 2048 &
-#  - android-wait-for-emulator
-#  - adb shell input keyevent 82 &
+before_script:
+  - "curl -H 'Cache-Control: no-cache' https://raw.githubusercontent.com/fossas/fossa-cli/master/install.sh | sudo bash"
+  - chmod +x gradlew
 
 script:
   #Android modules
@@ -63,22 +34,6 @@ script:
   - ./gradlew detekt
   - fossa --option online:true
   #where can we upload detekt results to have a badge?
-
-#FOSSA license check
-before_script:
-  - "curl -H 'Cache-Control: no-cache' https://raw.githubusercontent.com/fossas/fossa-cli/master/install.sh | sudo bash"
-
-before_install:
-
-  # Android API Level 30
-  - yes | sdkmanager "platforms;android-30"
-  - yes | sdkmanager "build-tools;30.0.2"
-#  # Android API Level 31
-#  - yes | sdkmanager "platforms;android-31"
-#  - yes | sdkmanager "build-tools;31.0.0"
-#  # Android API Level 32
-#  - yes | sdkmanager "platforms;android-32"
-#  - yes | sdkmanager "build-tools;32.0.0"
 
 before_cache:
   - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
