--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.6.10'
+    ext.kotlin_version = '1.7.20'
     repositories {
         google()
         mavenCentral()
+        gradlePluginPortal()
+        maven {
+            url "https://maven.pkg.jetbrains.space/public/p/compose/dev"
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:7.2.2'
@@ -18,7 +22,13 @@ buildscript {
         // in the individual module build.gradle files
 
     }
+
 }
+plugins {
+    //kotlin("jvm") version "1.7.20"
+    id("org.jetbrains.compose") version "1.3.0-rc02"
+}
+
 apply plugin: 'com.vanniktech.android.junit.jacoco'
 apply plugin: "io.gitlab.arturbosch.detekt"
 apply plugin: 'kotlinx-serialization'
